--- a/src/components/Score.css
+++ b/src/components/Score.css
@@ -1,4 +1,24 @@
 
-p[is_current=true] {
+div[is_current=true] {
     color: blue;
   }
+
+.score{
+  background-color: lavenderblush;
+  margin: 5px;
+  padding: 5px;
+  
+}
+
+.persons {
+  background-color: pink;
+  display: flex;
+  flex-direction: column;
+  width:200px;
+}
+
+.group{
+  display: flex;
+  background-color: rosybrown;
+  
+}
