--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-/* body {
-  margin: 0;
+body {
+  display: flex;
+  background-color: aliceblue;
+  justify-content: center;
+  
+  
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +15,4 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} */
+}
